--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -4,13 +4,19 @@
     border: 5px solid gray;
     flex-direction: column;
     text-align: center;
-
+  
     .boton {
         font-family: Arial, Helvetica, sans-serif;
 
         a {
             text-align: center;
             text-decoration: none;
+        }
+    }
+    .content{
+        img{
+            width: 100%;
+            margin-top: 5px;
         }
     }
   
