--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,3 +10,7 @@
 @import "./layout/sections";
 /*components*/
 @import "./components/cards";
+@import "./layout/galeria";
+/*media queries*/
+@import "./layout/media320";
+@import "./layout/media1440";
